fix button spacing

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -284,7 +284,7 @@
     top: 40px;
     left: 50%;
     transform: translate(-50%, 0);
-    margin: .5em;
+    margin: .65em;
     opacity: 0;
     transition: opacity .3s ease-in;
 }
